fix: qa-wrap margin-top:40px 對齊 form padding 標題

--- a/resources/scss/web/_message.scss
+++ b/resources/scss/web/_message.scss
@@ -37,7 +37,7 @@
 
         .qa-wrap{
             @include media.desktop{
-                margin: 0;
+                margin: 40px 0;
             }
         }
     }
